# chartnav-platform

./: .gitignore  CLAUDE.md  Makefile  README.md  chartnav_security_integrate.py  docker-compose.demo.yml
apps/api/: .env.example  Dockerfile  alembic.ini  chartnav.db  entrypoint.sh  pyproject.toml  scripts_seed.py  scripts_seed_demo.py
apps/api/alembic/: env.py
apps/api/app/: audit.py  auth.py  authz.py  config.py  db.py  logging_config.py  main.py  metrics.py  middleware.py  retention.py  security_policy.py  session_governance.py  session_policy.py
apps/api/scripts/: smoke.sh
apps/api/tests/: conftest.py  test_admin.py  test_admin_dashboard.py  test_ai_governance.py  test_ai_security.py  test_audio_capture_source_phase36.py  test_audio_intake.py  test_audio_pipeline_phase35.py  test_auth.py  test_auth_modes.py  test_bridge_sync.py  test_canonical_lifecycle_wave_integration.py  test_clinical.py  test_clinical_coding.py  test_clinical_shortcut_favorites.py  test_clinical_shortcuts.py  test_consult_letters.py  test_control_plane.py  test_deployment_telemetry_phase37.py  test_encounter_bridge.py  test_encounter_revisions_attestation.py  test_encounter_templates.py  test_enterprise.py  test_evidence_maturity.py  test_evidence_operations_closure.py  test_external_evidence_hardening.py  test_fhir_adapter.py  test_handoff_export.py  test_ingestion_lifecycle.py  test_intake_submissions.py  test_intake_tokens.py  test_integrated_encounters.py  test_invitations.py  test_kpi_scorecard.py  test_messages_status_transitions.py  test_messaging_opt_out.py  test_note_artifact.py  (+25 more)
(+278 files in other folders)
