[project]
name = "chartnav-api"
version = "0.1.0"
description = "ChartNav Platform API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]
postgres = [
  "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
